// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RegistrationForm /> renders a form with inputs and a captcha 1`] = `
[
  <div
    className="sc-bcXGCL eEZeZH toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL hOBcKE cap-form-control"
  >
    <label
      className="sc-bcXGCL egOoIT cap-form-label"
      htmlFor=":r0:"
      style={
        {
          "marginLeft": 0,
          "marginTop": 0,
        }
      }
    >
      <span
        className="sc-bcXGCL dRxVYq cap-text"
        style={
          {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
      >
        global.email
      </span>
    </label>
    <input
      aria-required={true}
      autoComplete="email"
      autoFocus={true}
      className="sc-bcXGCL sc-UpCiH cmIMrK fVmBzY cap-input"
      disabled={false}
      id=":r0:"
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="email.placeholder"
      readOnly={false}
      required={true}
      type="email"
    />
  </div>,
  <div
    className="sc-bcXGCL jAguPG"
  >
    <div
      className="sc-bcXGCL dAxZoG cap-form-control"
    >
      <label
        className="sc-bcXGCL egOoIT cap-form-label"
        htmlFor=":r1:"
        style={
          {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
      >
        <span
          className="sc-bcXGCL dRxVYq cap-text"
          style={
            {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          registration.password
        </span>
      </label>
      <input
        aria-required={true}
        autoComplete="off"
        autoFocus={true}
        className="sc-bcXGCL sc-UpCiH cmIMrK fVmBzY cap-input"
        disabled={false}
        id=":r1:"
        name="plainPassword"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={false}
        required={true}
        type="password"
      />
    </div>
  </div>,
  <div
    className="sc-bcXGCL hOBcKE cap-form-control"
  >
    <label
      className="sc-bcXGCL egOoIT cap-form-label"
      htmlFor="username"
      style={
        {
          "marginLeft": 0,
          "marginTop": 0,
        }
      }
    >
      <span
        className="sc-bcXGCL dRxVYq cap-text"
        style={
          {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
      >
        global.fullname
      </span>
    </label>
    <input
      aria-required={true}
      autoComplete="username"
      className="sc-bcXGCL sc-UpCiH cmIMrK fVmBzY cap-input"
      disabled={false}
      id="username"
      minLength={2}
      name="username"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="global.placeholder.name"
      readOnly={false}
      required={true}
      type="text"
    />
  </div>,
  <div
    className="sc-bcXGCL hOBcKE cap-form-control"
  >
    <label
      className="sc-bcXGCL egOoIT cap-form-label"
      htmlFor="responses.0.value"
    >
      <span
        className="sc-bcXGCL dRxVYq cap-text"
        style={
          {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
      >
        &lt;mock-value-for-field-"title"&gt;
      </span>
      <p
        className="sc-bcXGCL ayaql cap-text"
      >
        global.optional
      </p>
    </label>
    <span
      className="sc-bcXGCL cqMoEC cap-form-guideline"
    >
      &lt;mock-value-for-field-"helpText"&gt;
    </span>
    <div
      className=" ql-editor wysiwyg-render"
      dangerouslySetInnerHTML={
        {
          "__html": "<mock-value-for-field-"description">",
        }
      }
    />
    <input
      aria-required={false}
      className="sc-bcXGCL sc-UpCiH cmIMrK fVmBzY cap-input"
      disabled={false}
      id="responses.0.value"
      name="responses.0.value"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>,
  <div
    className="sc-bcXGCL hOBcKE cap-form-control"
  >
    <label
      className="sc-bcXGCL hcROMr"
      htmlFor="charte"
    >
      <div
        className="sc-bcXGCL fMWewb cap-checkbox"
        style={
          {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
      >
        <input
          aria-required={true}
          className="sc-bcXGCL kwwjrp cap-checkbox__input"
          disabled={false}
          id="charte"
          name="charte"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={false}
          required={true}
          style={
            {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
          type="checkbox"
        />
        <div
          className="sc-bcXGCL isUvxF cap-checkbox__box"
        />
      </div>
      <span
        className="sc-bcXGCL gXHFMY"
      >
        <span
          className="sc-bcXGCL sc-cc425a65-0 gjsubU hMXkYl"
        >
          registration.charte
        </span>
      </span>
    </label>
  </div>,
  <div
    id="recaptcha"
    style={
      {
        "transform": "scale(0.85)",
        "transformOrigin": "0 0",
      }
    }
  />,
]
`;

exports[`<RegistrationForm /> renders a form with user_type enabled 1`] = `
[
  <div
    className="sc-bcXGCL eEZeZH toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL hOBcKE cap-form-control"
  >
    <label
      className="sc-bcXGCL egOoIT cap-form-label"
      htmlFor=":r5:"
      style={
        {
          "marginLeft": 0,
          "marginTop": 0,
        }
      }
    >
      <span
        className="sc-bcXGCL dRxVYq cap-text"
        style={
          {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
      >
        global.email
      </span>
    </label>
    <input
      aria-required={true}
      autoComplete="email"
      autoFocus={true}
      className="sc-bcXGCL sc-UpCiH cmIMrK fVmBzY cap-input"
      disabled={false}
      id=":r5:"
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="email.placeholder"
      readOnly={false}
      required={true}
      type="email"
    />
  </div>,
  <div
    className="sc-bcXGCL jAguPG"
  >
    <div
      className="sc-bcXGCL dAxZoG cap-form-control"
    >
      <label
        className="sc-bcXGCL egOoIT cap-form-label"
        htmlFor=":r6:"
        style={
          {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
      >
        <span
          className="sc-bcXGCL dRxVYq cap-text"
          style={
            {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          registration.password
        </span>
      </label>
      <input
        aria-required={true}
        autoComplete="off"
        autoFocus={true}
        className="sc-bcXGCL sc-UpCiH cmIMrK fVmBzY cap-input"
        disabled={false}
        id=":r6:"
        name="plainPassword"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={false}
        required={true}
        type="password"
      />
    </div>
  </div>,
  <div
    className="sc-bcXGCL hOBcKE cap-form-control"
  >
    <label
      className="sc-bcXGCL egOoIT cap-form-label"
      htmlFor="username"
      style={
        {
          "marginLeft": 0,
          "marginTop": 0,
        }
      }
    >
      <span
        className="sc-bcXGCL dRxVYq cap-text"
        style={
          {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
      >
        global.fullname
      </span>
    </label>
    <input
      aria-required={true}
      autoComplete="username"
      className="sc-bcXGCL sc-UpCiH cmIMrK fVmBzY cap-input"
      disabled={false}
      id="username"
      minLength={2}
      name="username"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="global.placeholder.name"
      readOnly={false}
      required={true}
      type="text"
    />
  </div>,
  <div
    className="sc-bcXGCL hOBcKE cap-form-control"
  >
    <label
      className="sc-bcXGCL egOoIT cap-form-label"
      htmlFor=":r8:"
      style={
        {
          "marginLeft": 0,
          "marginTop": 0,
        }
      }
    >
      <span
        className="sc-bcXGCL dRxVYq cap-text"
        style={
          {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
      >
        registration.type
      </span>
      <p
        className="sc-bcXGCL ayaql cap-text"
      >
        global.optional
      </p>
    </label>
    <div
      className="sc-bcXGCL cKgHWb"
    >
      <div
        className="cap-select css-b62m3t-container"
        id=":r8:"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-2-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
          role="log"
        />
        <div
          className="cap-select__control css-1qmtci6-control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="cap-select__value-container css-206zzd"
          >
            <div
              className="cap-select__placeholder css-rf6qli-placeholder"
              id="react-select-2-placeholder"
            >
              registration.type
            </div>
            <div
              className="cap-select__input-container css-1uvadrb"
              data-value=""
            >
              <input
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-describedby="react-select-2-placeholder"
                aria-expanded={false}
                aria-haspopup={true}
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                className="cap-select__input"
                disabled={false}
                id="userType"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                spellCheck="false"
                style={
                  {
                    "background": 0,
                    "border": 0,
                    "color": "inherit",
                    "font": "inherit",
                    "gridArea": "1 / 2",
                    "label": "input",
                    "margin": 0,
                    "minWidth": "2px",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "100%",
                  }
                }
                tabIndex={0}
                type="text"
                value=""
              />
            </div>
          </div>
          <svg
            aria-hidden="true"
            className="sc-bcXGCL sc-oZHua kviGeh cCzERh cap-icon"
            fill="none"
            height="1em"
            style={
              {
                "cursor": "pointer",
              }
            }
            viewBox="0 0 12 7"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 7c.164 0 .326-.032.475-.095q.227-.096.392-.27l4.916-5.216a.83.83 0 0 0 .214-.62.85.85 0 0 0-.311-.584.97.97 0 0 0-.66-.214.95.95 0 0 0-.632.277l-4.3 4.562a.133.133 0 0 1-.188 0L1.606.278A.95.95 0 0 0 .974.001a.97.97 0 0 0-.66.214A.85.85 0 0 0 .003.8a.83.83 0 0 0 .214.62l4.915 5.214c.109.115.242.208.392.27.15.064.312.097.476.097"
              fill="currentColor"
            />
          </svg>
        </div>
        <input
          name="userType"
          type="hidden"
          value=""
        />
      </div>
    </div>
  </div>,
  <div
    className="sc-bcXGCL hOBcKE cap-form-control"
  >
    <label
      className="sc-bcXGCL egOoIT cap-form-label"
      htmlFor="responses.0.value"
    >
      <span
        className="sc-bcXGCL dRxVYq cap-text"
        style={
          {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
      >
        &lt;mock-value-for-field-"title"&gt;
      </span>
      <p
        className="sc-bcXGCL ayaql cap-text"
      >
        global.optional
      </p>
    </label>
    <span
      className="sc-bcXGCL cqMoEC cap-form-guideline"
    >
      &lt;mock-value-for-field-"helpText"&gt;
    </span>
    <div
      className=" ql-editor wysiwyg-render"
      dangerouslySetInnerHTML={
        {
          "__html": "<mock-value-for-field-"description">",
        }
      }
    />
    <input
      aria-required={false}
      className="sc-bcXGCL sc-UpCiH cmIMrK fVmBzY cap-input"
      disabled={false}
      id="responses.0.value"
      name="responses.0.value"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>,
  <div
    className="sc-bcXGCL hOBcKE cap-form-control"
  >
    <label
      className="sc-bcXGCL hcROMr"
      htmlFor="charte"
    >
      <div
        className="sc-bcXGCL fMWewb cap-checkbox"
        style={
          {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
      >
        <input
          aria-required={true}
          className="sc-bcXGCL kwwjrp cap-checkbox__input"
          disabled={false}
          id="charte"
          name="charte"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={false}
          required={true}
          style={
            {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
          type="checkbox"
        />
        <div
          className="sc-bcXGCL isUvxF cap-checkbox__box"
        />
      </div>
      <span
        className="sc-bcXGCL gXHFMY"
      >
        <span
          className="sc-bcXGCL sc-cc425a65-0 gjsubU hMXkYl"
        >
          registration.charte
        </span>
      </span>
    </label>
  </div>,
]
`;

exports[`<RegistrationForm /> renders a form with zipcode enabled 1`] = `
[
  <div
    className="sc-bcXGCL eEZeZH toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL hOBcKE cap-form-control"
  >
    <label
      className="sc-bcXGCL egOoIT cap-form-label"
      htmlFor=":rb:"
      style={
        {
          "marginLeft": 0,
          "marginTop": 0,
        }
      }
    >
      <span
        className="sc-bcXGCL dRxVYq cap-text"
        style={
          {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
      >
        global.email
      </span>
    </label>
    <input
      aria-required={true}
      autoComplete="email"
      autoFocus={true}
      className="sc-bcXGCL sc-UpCiH cmIMrK fVmBzY cap-input"
      disabled={false}
      id=":rb:"
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="email.placeholder"
      readOnly={false}
      required={true}
      type="email"
    />
  </div>,
  <div
    className="sc-bcXGCL jAguPG"
  >
    <div
      className="sc-bcXGCL dAxZoG cap-form-control"
    >
      <label
        className="sc-bcXGCL egOoIT cap-form-label"
        htmlFor=":rc:"
        style={
          {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
      >
        <span
          className="sc-bcXGCL dRxVYq cap-text"
          style={
            {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          registration.password
        </span>
      </label>
      <input
        aria-required={true}
        autoComplete="off"
        autoFocus={true}
        className="sc-bcXGCL sc-UpCiH cmIMrK fVmBzY cap-input"
        disabled={false}
        id=":rc:"
        name="plainPassword"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={false}
        required={true}
        type="password"
      />
    </div>
  </div>,
  <div
    className="sc-bcXGCL hOBcKE cap-form-control"
  >
    <label
      className="sc-bcXGCL egOoIT cap-form-label"
      htmlFor="username"
      style={
        {
          "marginLeft": 0,
          "marginTop": 0,
        }
      }
    >
      <span
        className="sc-bcXGCL dRxVYq cap-text"
        style={
          {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
      >
        global.fullname
      </span>
    </label>
    <input
      aria-required={true}
      autoComplete="username"
      className="sc-bcXGCL sc-UpCiH cmIMrK fVmBzY cap-input"
      disabled={false}
      id="username"
      minLength={2}
      name="username"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="global.placeholder.name"
      readOnly={false}
      required={true}
      type="text"
    />
  </div>,
  <div
    className="sc-bcXGCL hOBcKE cap-form-control"
  >
    <label
      className="sc-bcXGCL egOoIT cap-form-label"
      htmlFor=":re:"
      style={
        {
          "marginLeft": 0,
          "marginTop": 0,
        }
      }
    >
      <span
        className="sc-bcXGCL dRxVYq cap-text"
        style={
          {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
      >
        user.register.zipcode
      </span>
      <p
        className="sc-bcXGCL ayaql cap-text"
      >
        global.optional
      </p>
    </label>
    <input
      autoComplete="postal-code"
      className="sc-bcXGCL sc-UpCiH cmIMrK fVmBzY cap-input"
      disabled={false}
      id=":re:"
      name="zipcode"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>,
  <div
    className="sc-bcXGCL hOBcKE cap-form-control"
  >
    <label
      className="sc-bcXGCL egOoIT cap-form-label"
      htmlFor="responses.0.value"
    >
      <span
        className="sc-bcXGCL dRxVYq cap-text"
        style={
          {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
      >
        &lt;mock-value-for-field-"title"&gt;
      </span>
      <p
        className="sc-bcXGCL ayaql cap-text"
      >
        global.optional
      </p>
    </label>
    <span
      className="sc-bcXGCL cqMoEC cap-form-guideline"
    >
      &lt;mock-value-for-field-"helpText"&gt;
    </span>
    <div
      className=" ql-editor wysiwyg-render"
      dangerouslySetInnerHTML={
        {
          "__html": "<mock-value-for-field-"description">",
        }
      }
    />
    <input
      aria-required={false}
      className="sc-bcXGCL sc-UpCiH cmIMrK fVmBzY cap-input"
      disabled={false}
      id="responses.0.value"
      name="responses.0.value"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
    />
  </div>,
  <div
    className="sc-bcXGCL hOBcKE cap-form-control"
  >
    <label
      className="sc-bcXGCL hcROMr"
      htmlFor="charte"
    >
      <div
        className="sc-bcXGCL fMWewb cap-checkbox"
        style={
          {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
      >
        <input
          aria-required={true}
          className="sc-bcXGCL kwwjrp cap-checkbox__input"
          disabled={false}
          id="charte"
          name="charte"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={false}
          required={true}
          style={
            {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
          type="checkbox"
        />
        <div
          className="sc-bcXGCL isUvxF cap-checkbox__box"
        />
      </div>
      <span
        className="sc-bcXGCL gXHFMY"
      >
        <span
          className="sc-bcXGCL sc-cc425a65-0 gjsubU hMXkYl"
        >
          registration.charte
        </span>
      </span>
    </label>
  </div>,
]
`;
